--- a/main.html
+++ b/main.html
@@ -6,8 +6,25 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
 	<!-- the entire body must be written by student -->
+<body style="background-color: yellow; text-align: center;">
+
+    <div>
+        <h1 id="f1" style="color: red;">Flowers photos</h1>
+        <p style="font-size: 18px; color: green;">
+            Flowers are one of nature’s most beautiful creations, adding color and fragrance to our world. 
+            They symbolize love, beauty, and joy across different cultures.
+        </p>
+    </div>
+
+    <div>
+        <h1 id="f2" style="color: blue;">Roses pictures</h1>
+        <p style="font-size: 18px; color: brown;">
+            Roses are among the most popular and admired flowers, known for their rich fragrance and elegant beauty.
+            They come in various colors, each carrying a unique meaning.
+        </p>
+    </div>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
